update hidden overflow to fixed position

--- a/src/components/BlogMenu/BlogMenu.scss
+++ b/src/components/BlogMenu/BlogMenu.scss
@@ -140,5 +140,5 @@
 }
 
 .overflow-y-hidden {
-    overflow-y: hidden;
+    position: fixed;
 }
